# redimnet2

./: LICENSE  README.md  hubconf.py
applications/speaker_rec/: README.md  launch.md  launch.sh  pyproject.toml
applications/speaker_rec/examples/vb2_vox2_cnc2/: README.md
applications/speaker_rec/examples/vb2_vox2_cnc2/recipes/redimnet2/b3/: lm.yaml  ptn.yaml
applications/speaker_rec/examples/vb2_vox2_cnc2/recipes/redimnet2/b6/: lm.yaml  ptn.yaml
applications/speaker_rec/examples/vb2_vox2_cnc2/scripts/: filter_datalist_by_duration.py  gen_datalists.py  infer_durations_sf.py  join_datalists.py  prepare_vox2_vb2_cnc2_data.sh  prepare_vox2_vb2_cnc2_lm_data.sh
applications/speaker_rec/examples/vox2/: README.md
applications/speaker_rec/examples/vox2/recipes/redimnet2/b3/: lm.yaml  ptn.yaml
applications/speaker_rec/examples/vox2/recipes/redimnet2/b6/: lm.yaml  ptn.yaml
applications/speaker_rec/examples/vox2/scripts/: prepare_data.py
applications/speaker_rec/wespeaker_lite/dataset/: augs.py  dataset.py  lmdb_data.py  processor.py
applications/speaker_rec/wespeaker_lite/models/: mix_augs.py  projections.py  speaker_model.py
applications/speaker_rec/wespeaker_lite/utils/: checkpoint.py  executor.py  schedulers.py  utils.py
redimnet2/: __init__.py  redimnet2.py
redimnet2/layers/: attention.py  blocks.py  convnext.py  features_tf.py
